kubernetes/apps/auth/pocket-id/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pocket-id
  namespace: auth
spec:
  selector:
    app: pocket-id
  ports:
    - name: http
      port: 1411
      targetPort: 1411
