kubernetes/apps/auth/pocket-id/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pocket-id
  namespace: auth
spec:
  parentRefs:
    - name: prod
      namespace: gateway
  hostnames:
    - pocket-id.local.elmurphy.com
  rules:
    - backendRefs:
        - name: pocket-id
          port: 1411
